Fix dev_limit macro and resolve BigQuery type issues

--- a/.github/workflows/publish_dbt_docs.yml
+++ b/.github/workflows/publish_dbt_docs.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Write dbt profiles.yml
         run: |
           mkdir -p ~/.dbt
-          cat << 'EOF' > ~/.dbt/profiles.yml
+          cat << 'EOF' > $HOME/.dbt/profiles.yml
           ae_stanley_igwe_monzo:
             target: prod
             outputs:
