--- a/.github/workflows/publish_dbt_docs.yml
+++ b/.github/workflows/publish_dbt_docs.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish-docs:
     runs-on: ubuntu-latest
+    env:
+      DBT_ALLOW_PROD: "true"
 
     steps:
       - name: Checkout repo
@@ -56,7 +58,7 @@ jobs:
                 type: bigquery
                 method: service-account
                 project: analytics-take-home-test
-                dataset: AE_Stan_Igwe_Task
+                dataset: AE_monzo_datawarehouse_SI_prod
                 keyfile: $GOOGLE_APPLICATION_CREDENTIALS
                 location: US
                 threads: 4
