--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -20,8 +20,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DBT_PROFILES_DIR: ./.dbt
-      DBT_TARGET: ci
+      DBT_PROFILES_DIR: .ci_dbt
+      DBT_ALLOW_PROD: "true"
 
     steps:
       - name: Checkout repo
@@ -46,6 +46,31 @@ jobs:
 
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
+
+      # Create the CI-only dbt profiles directory
+      - name: Create dbt profiles directory
+        run: mkdir -p .ci_dbt
+
+      # Write profiles.yml (THIS is the one dbt will use)
+      - name: Write profiles.yml
+        run: |
+          cat > .ci_dbt/profiles.yml <<EOF
+          ae_stanley_tasks:
+            target: prod
+            outputs:
+              prod:
+                type: bigquery
+                method: oauth
+                project: analytics-take-home-test
+                dataset: AE_monzo_datawarehouse_SI_prod
+                keyfile: $GOOGLE_APPLICATION_CREDENTIALS
+                location: US
+                threads: 4
+          EOF
+
+      # Print the file so you can see it in logs (for sanity)
+      - name: Show profiles.yml
+        run: cat .ci_dbt/profiles.yml
 
       # Optional: sanity check
       - name: dbt debug
