CI pipeline Tests 3

--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           cat > .ci_dbt/profiles.yml <<EOF
           ae_stanley_tasks:
-            target: ci
+            target: dev
             outputs:
               ci:
                 type: bigquery
