CI pipeline Tests 9

--- a/.github/workflows/dbt-ci.yml
+++ b/.github/workflows/dbt-ci.yml
@@ -61,4 +61,4 @@ jobs:
         run: dbt ls
 
       - name: SQLFluff lint
-        run: sqlfluff lint models/
+        run: sqlfluff lint models/ --dialect bigquery
