Update core models for accounts and 7d active users

--- a/models/marts/core/dim_accounts_history.yml
+++ b/models/marts/core/dim_accounts_history.yml
@@ -2,6 +2,9 @@ version: 2
 
 models:
   - name: dim_accounts_history
+      config:
+      contract:
+        enforced: true
     tags:
       - core
       - lifecycle
