--- a/models/marts/core/dim_accounts.yml
+++ b/models/marts/core/dim_accounts.yml
@@ -2,6 +2,9 @@ version: 2
 
 models:
   - name: dim_accounts
+      config:
+      contract:
+        enforced: true
     tags:
       - core
       - current_state
