Update core models for accounts and 7d active users news

--- a/models/marts/core/fct_7d_active_users_daily.yml
+++ b/models/marts/core/fct_7d_active_users_daily.yml
@@ -2,6 +2,9 @@ version: 2
 
 models:
   - name: fct_7d_active_users_daily
+    config:
+      contract:
+        enforced: true
     tags:
       - metric
       - growth
