--- a/models/marts/core/fct_7d_active_users_daily.yml
+++ b/models/marts/core/fct_7d_active_users_daily.yml
@@ -63,6 +63,7 @@ models:
 
     columns:
       - name: activity_date
+        data_type: date
         description: >
           The reporting date for the metric.
           The 7-day activity window is evaluated over the range
@@ -72,6 +73,7 @@ models:
           - unique
 
       - name: eligible_users
+        data_type: integer
         description: >
           Count of distinct users who had at least one open account on the
           reporting date. This value forms the denominator of the metric.
@@ -79,6 +81,7 @@ models:
           - not_null
 
       - name: active_users
+        data_type: integer
         description: >
           Count of distinct eligible users who performed at least one
           transaction on any day within the 7-day rolling window ending
@@ -87,6 +90,7 @@ models:
           - not_null
 
       - name: active_rate_7d
+        data_type: float
         description: >
           Ratio of active_users to eligible_users.
           Represents the proportion of users with an open account who were
