--- a/models/marts/core/dim_accounts_history.yml
+++ b/models/marts/core/dim_accounts_history.yml
@@ -52,25 +52,30 @@ models:
 
     columns:
       - name: account_id
+        data_type: string
         description: Unique hashed identifier for the account
         tests:
           - not_null
 
       - name: account_status
+        data_type: string
         description: Account state during the validity period
         tests:
           - accepted_values:
               values: ['open', 'closed']
 
       - name: valid_from
+        data_type: timestamp
         description: Timestamp when the account entered this state
         tests:
           - not_null
 
       - name: valid_to
+        data_type: timestamp
         description: Timestamp when the account exited this state
 
       - name: is_current
+        data_type: boolean
         description: >
           Boolean flag indicating whether this row represents the
           current active state of the account.
